--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "env": {
-    "VITE_API_BASE_URL": "@vite_api_base_url",
-    "DATABASE_URL": "@database_url",
-    "FIREBASE_SERVICE_ACCOUNT": "@firebase_service_account"
-  }
+  "outputDirectory": "dist"
 }
